# optimization-Registration

./: CMakeLists.txt  CMakeLists.txt.user.2c46514  CMakeLists.txt.user.94ceeba  README.en.md  README.md  rocorderror.md
PointCloudSuper/: .PointCloudSuper.sh.swp  PointCloudSuper.sh  Untitled Document  config.sh  libglib-2.0.so.0  libgmp.so.10  libtbbmalloc.so.2  perform.sh
acquisition/: CMakeLists.txt  CMakeLists.txt.user.94ceeba  cc  package.xml
acquisition/src/: CMakeLists.txt  my_hello_world_node.cpp
acquisition/src/core_common/: CMakeLists.txt  core_common.pri  iconhelper.cpp
acquisition/src/form/: CMakeLists.txt  CSensorData.cpp  CSensorData.h  CSensorData.ui  form.pri  frmconfig.cpp  frmconfig.h  frmconfig.ui  frmdevice.cpp  frmdevice.ui  frmdevicecontrol.cpp  frmdevicecontrol.ui  frmdevicepanel.cpp  frmdevicepanel.ui  frmdevicepanelx.cpp  frmdevicepanelx.h  frmdevicepanelx.ui  frmmain.cpp  frmmain.ui  frmplot.cpp  frmplot.ui  frmplotpanel.cpp  frmplotpanel.h  frmplotpanel.ui  frmstylewidget.cpp  frmstylewidget.h  frmstylewidget.ui
acquisition/src/include/: bartemp.h  base64helper.h  frmdevice.h  frmdevicecontrol.h  frmdevicepanel.h  frminputnum.h  frmmain.h  frmplot.h  head.h  iconhelper.h  panelwidget.h  quihelper.h  slider.h  stylewidget.h  switchbutton.h
acquisition/src/inputnum/: CMakeLists.txt  frminputnum.cpp  frminputnum.ui  inputnum.pri
acquisition/src/usercontrol/: CMakeLists.txt  bartemp.cpp  gaugesimple.cpp  gaugesimple.h  panelwidget.cpp  slider.cpp  stylewidget.cpp  switchbutton.cpp  usercontrol.pri
coreio/: QCORE_IO_PLUGIN.exp  QCORE_IO_PLUGIN.lib
doc/en_2.6.1/: .~lock.CloudCompare User manual 2.6.1.docx#
plugins/core/Standard/qPCL/: CMakeLists.txt
qCC/: CMakeLists.txt  ManagerWidget.cpp  ManagerWidget.h  SgsTagging.cpp  SgsTagging.h  ccGraphicalTransformationTool.cpp  ccGraphicalTransformationTool.h  ccPlaneEditDlg.cpp  ccPlaneEditDlg.h  ccPointPairRegistrationDlg.cpp  ccPointPairRegistrationDlg.h  main.cpp  mainwindow.cpp  mainwindow.h
qCC/images/icon/: icon.rar
qCC/slam/: .sm2cc.cpp.swp  CDataChange.cpp  CDataChange.cpp.autosave  CDataChange.h  CDataChange.h.autosave  CGYLCommon.h  CMakeLists.txt  CObjCCAlgorithm.cpp  CObjCCAlgorithm.h  CSlamLadirDialog.cpp  CSlamLadirDialog.cpp.autosave  CSlamLadirDialog.h  CSlamLadirDialog.h.autosave  CSlamLadirDialog.ui  CSlamPointPairRegistrationDlg.cpp  CSlamPointPairRegistrationDlg.h  ClidarCompute.cpp  ClidarCompute.h  ColorChangeTool.cpp  ColorChangeTool.h  ColorChangeTool.ui  Darcula.qss  Darcula2.qss  Darcula3.qss  cc.cpp  cccmakecommand.txt  clygnanoflann.hpp  option.txt  slam.qrc  utils.h
qCC/spdloginc/spdlog/: common.h
qCC/spdloginc/spdlog/details/: os-inl.h  os.h
qCC/spdloginc/spdlog/sinks/: hourly_file_sink.h  stdout_sinks-inl.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
qCC/ui_templates/: ManagerWidget.ui  SgsTagging.ui  mainWindow.ui  mainWindow.ui.autosave
